# microservice_template

./: LICENSE.md
database/: .gitignore  README.md  docker-compose.yml  pyproject.toml
database/database/: .env  config.py  pyproject.toml
database/database/models/: __init__.py  user.py
database/database/models/core/: main.py  service_object.py
database/migrations/: env.py
database/migrations/versions/: 0447bd00b64a_initial_migration.py
domain/: .gitignore  README.md  pyproject.toml
domain/domain/: .env  config.py
domain/domain/feature1/: model.py
domain/domain/tests/: test_user_model.py
services/: .env  config.py  main.py  pyproject.toml  svc_logger.py
services/api/: api_main.py
services/grpc/: grpc_main.py
services/grpc/services/: services.py
services/kafka/: kafka_main.py
services/services/: README.md  main.py  pyproject.toml
services/services/api/: api_main.py
services/services/grpc/: grpc_main.py
