[tool.poetry]
name = "keven_core"
version = "0.1.0"
description = "Core utilities and shared components for KEVEN's microservices."
authors = ["Craig Holland <craig_holland@hotmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/kevenai/keven_core"
packages = [{ include = "keven_core" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.0"
grpcio = "^1.56.0"
grpcio-tools = "^1.56.0"
kafka-python = "^2.0.2"
loguru = "^0.7.0"
PyJWT = "^2.6.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"

types-requests = "^2.28.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.4.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
keven-core = "keven_core.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
