[tool.poetry]
name = "generic_microservice_domain"
version = "0.1.0"
description = "The domain submodule for the generic KEVEN microservice, defining core business logic, domain models, and data validation structures."
authors = ["Craig Holland <craig_holland@hotmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "domain"}]

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "^4.25.0"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.1"
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
